Boas vindas ao jogador e instrucoes

--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
 body {
     font-family: 'Montserrat', sans-serif;
-	background: #e19898;
-	padding: 20px 0;
+	background: linear-gradient(#14f745, #59c062);
 }
