--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
 body {
     font-family: 'Montserrat', sans-serif;
-	background: linear-gradient(#50def7, #220bec);
+	background: linear-gradient(#50def7, #696969);
 }
