--- a/style.css
+++ b/style.css
@@ -1,4 +1,86 @@
-body {
+html, body {
+    width: 100%;
+    height: 100%;
     font-family: 'Montserrat', sans-serif;
-	background: linear-gradient(#50def7, #696969);
+    background: linear-gradient(#50def7, #696969);
+}
+
+header {
+    text-transform: uppercase;
+    text-align: left;
+    font-size: 30px;
+    font-weight: bold;
+    padding: 10px 40px;
+    transition: 2s all;
+}
+
+main {
+    text-align: left;
+    font-size: 20px;
+    padding: 10px 15px;
+    line-height: 1.2;
+}
+
+main h2 {
+    text-transform: uppercase;
+    font-size: 25px;
+    font-weight: bold;
+    padding: 5px 30px;
+    transition: 2s all;
+
+}
+
+.jogo {
+    text-transform: uppercase;
+    padding: 5px;
+    font-size: 25px;
+}
+
+.jogo h3 {
+    padding: 5px;
+	font-weight: bold;
+}
+
+.jogo p {
+	padding: 5px;
+	color: white;
+	font-weight: bold;
+	
+}
+
+#input-chute {
+    background: rgb(245, 214, 158);
+	margin: 10px;
+	padding: 10px;
+	width: 90px;
+    font-size: 20px;
+    border-radius: 5px;
+    border: none;
+}
+
+#submit-tentativa {
+	width: 130px;
+	padding: 10px 0;
+	background: orange;
+	color: white;
+	font-weight: bold;
+	font-size: 20px;
+	border: none;
+	border-radius: 5px;
+	transition: 1s all;
+	cursor: pointer;
+}
+
+#submit-reiniciar {
+	width: 180px;
+    margin: 10px;
+	padding: 10px 0;
+	background: rgb(196, 2, 2);
+	color: white;
+	font-weight: bold;
+	font-size: 20px;
+	border: none;
+	border-radius: 5px;
+	transition: 1s all;
+	cursor: pointer;
 }
